--- a/bho.html
+++ b/bho.html
@@ -231,9 +231,9 @@
 
     <!-- Pager -->
     <div class="pager" data-aos="fade-up">
-    <a href="/"><i class="fas fa-chevron-left"></i></a>
+    <a href="apt.html"><i class="fas fa-chevron-left"></i></a>
     <p>NEXT PROJECT</p>
-    <a href="esd.html"><i class="fas fa-chevron-right"></i></a>
+    <a href="myc.html"><i class="fas fa-chevron-right"></i></a>
     </div>
 
 </section>
