--- a/myc.html
+++ b/myc.html
@@ -226,9 +226,9 @@
 
     <!-- Pager -->
     <div class="pager" data-aos="fade-up">
-    <a href="/"><i class="fas fa-chevron-left"></i></a>
+    <a href="bho.html"><i class="fas fa-chevron-left"></i></a>
     <p>NEXT PROJECT</p>
-    <a href="esd.html"><i class="fas fa-chevron-right"></i></a>
+    <a href="nda.html"><i class="fas fa-chevron-right"></i></a>
     </div>
 
 </section>
