--- a/nda.html
+++ b/nda.html
@@ -105,18 +105,10 @@
             <article data-aos="fade-up">
                     <h3>Design Process: </h3>
 
-                    <p>With some basic color guidelines from the client to initiate the design process, I began with a vibrant and welcoming palette. 
-                        I used colors to not only enhance the entire space but also used it to create an environment that was comfortable and tranquil 
-                        to emulate the patient experience on site.</p>
-
-                        <p>The client helped to define the user personas, so that we could construct a layout that would complement their needs. The majority 
-                            of their patients were split in 2 groups. Young athletic group age 16-48. Typically with sports-related injuries. And an older 
-                            group 49-65 suffering form chronic pain or accident-related physical issues.  The preferred device user ratio was slightly titled 
-                            to desktop, which prompted a design initiative beginning from a wider viewport down.</p>
+                    <p>Using our branding guidelines, I used material design guidelines to begin teh process of building the app UI. 
+                        I used colors the stanrad image crops to dtermine layotu sizes for photos, and used the existing website theme to replicate
+                    the experince for the mobile app.</p>
                         
-                      <p>The initial landing page drew visitors with robust graphics and engaging icons to highlight the facilities therapy process and services. 
-                          CTA’s direct the user to relevant information points, services and inquiry forms to establish contact with the doctors and set appointments 
-                          to expedite treatment.</p>
 </article>
 </section>
 
@@ -181,19 +173,17 @@
         <article data-aos="fade-up">
                 <h3>Results: </h3>
 
-                <p>Since the launch of the website, Advantage Physical Therapy has expanded to a second location.  Search rankings have 
-                    improved from second page to top 10. Online appointments have accounted for over 25% of all new patients. Website 
-                    conversion rates have risen to nearly 5%, putting the website into the top percentile. WordPress has allowed the 
-                    client to successfully streamline content management to their satisfaction.</p>
+                <p>The app is available in the app store. Newsday subscribers have unlimited access to the app. Or, you can subscribe via iTunes for an all-access 
+                    digital subscription. The app has received a solid 4.4 rating out of 7.5K Ratings and is one of the sot downloaded apps in the NY market.</p>
 
                     <a href="https://apps.apple.com/us/app/newsday/id358571317" class="live-site">Available in the App Store <i class="fas fa-arrow-circle-right"></i></a>
 </article>
 
     <!-- Pager -->
     <div class="pager" data-aos="fade-in">
-    <a href="/"><i class="fas fa-chevron-left"></i></a>
+    <a href="myc.html"><i class="fas fa-chevron-left"></i></a>
     <p>NEXT PROJECT</p>
-    <a href="esd.html"><i class="fas fa-chevron-right"></i></a>
+    <a href="apt.html"><i class="fas fa-chevron-right"></i></a>
     </div>
 
 </section>
