--- a/index.html
+++ b/index.html
@@ -83,7 +83,17 @@
       </div>
     </a>
 </div>
-                <div class="container">
+<!-- <div class="container">
+    <a href="/">
+    <img src="images/thm/thm-tre.jpg">
+    <div class="overlay">
+        <div class="text">
+            <h3>Troon Electric NYC</h3>
+        </div>
+      </div>
+      </a>
+</div> -->
+                <!-- <div class="container">
                     <a href="/">
                     <img src="images/thm/osl-landing-page.jpg">
                     <div class="overlay">
@@ -92,8 +102,8 @@
                         </div>
                       </div>
                       </a>
-                </div>
-                <div class="container">
+                </div> -->
+                <!-- <div class="container">
                     <a href="/">
                     <img src="images/thm/thm-spl.jpg">
                     <div class="overlay">
@@ -102,7 +112,7 @@
                         </div>
                       </div>
                     </a>
-                </div>
+                </div> -->
 
             </div>
             </section>
