--- a/about-me.html
+++ b/about-me.html
@@ -47,11 +47,15 @@
                 <div class="bio">
     <h3>Interactive design is all about understanding people's needs.</h3>
 
-   <p>I am a web designer, graphic artist, UI/UX designer. I was born and raised on Long Island NY but I am currently living in Laguna Niguel CA. I am a designer and developer for <a href="https://electricbricks.net/">Electric Bricks</a>, a NY-based media agency. I have a knack for designing to solve problems and creating intuitive, robust interfaces. It starts with what the client is trying to convey and how the user needs to interpret that information.  </p>
+   <p>I am a web designer, graphic artist, UI/UX designer. I was born and raised on Long Island NY and I am currently living in Laguna Niguel CA. I work as 
+       a designer and WordPress developer for <a href="https://electricbricks.net/">Electric Bricks</a>, a NY-based media agency. I have a knack for designing to solve 
+       problems and creating intuitive, robust interfaces. It starts with listening to what the client needs and exploring solutions to the issue. I have designed for 
+    industries from Physical Therapy, Law Firms, Wineries, to large scale construction companies and news publishers.</p>
     
-    <p>Previously, I’ve had the opportunity to work as a Senior Designer at <a href="http:newsday.com">Newsday LLC</a>, as well as several other agencies from small boutique sized companies to large firms. </p>
+    <p>Previously, I’ve had the opportunity to work as a Senior Designer at <a href="http:newsday.com">Newsday LLC</a>, as well as several other agencies from 
+        small boutique sized companies to large firms. </p>
 
-    <a class="btn" href="resume.pdf">Resumè</a>
+    <a class="btn" href="pdf/matt-hogeboom-resume-2021.pdf">Resumè</a>
 
 </div>
             </div>
