--- a/about-me.html
+++ b/about-me.html
@@ -42,9 +42,12 @@
                     <h1>A little <span>about me</span></h1>
                     <p>For me, Interactive Design is about understanding people's needs.</p>
                     </div>
-            <div class="flex" data-aos="fade-up" data-aos-duration="4000">
-                <img src="images/portrait/mh-portrait.jpg"/>
-                <div class="bio">
+            <div class="container" data-aos="fade-up" data-aos-duration="4000">
+                <aside>
+                    <img src="https://via.placeholder.com/450"/>
+
+                </aside>
+                <aside>
     <h3>Interactive design is all about understanding people's needs.</h3>
 
    <p>I am a web designer, graphic artist, UI/UX designer. I was born and raised on Long Island NY and I am currently living in Laguna Niguel CA. I work as 
@@ -57,7 +60,7 @@
 
     <a class="btn" href="pdf/matt-hogeboom-resume-2021.pdf">Resumè</a>
 
-</div>
+                </aside>
             </div>
             </section>
 
