--- a/bho.html
+++ b/bho.html
@@ -35,7 +35,7 @@
                     
                 </div>
             </header>
-            <section id="case-study" class="hero bho" data-aos="fade" data-aos-duration="4000">
+            <section id="intro" class="hero bho" data-aos="fade" data-aos-duration="4000">
             <article class="container">
                 <aside>
                 <small>HEALTH & MEDICINE</small>
@@ -227,14 +227,14 @@
                     improved from second page to top 10. Online appointments have accounted for over 25% of all new patients. Website 
                     conversion rates have risen to nearly 5%, putting the website into the top percentile. WordPress has allowed the 
                     client to successfully streamline content management to their satisfaction. .</p>
+
+                    <div class="pager">
+                        <div> <p><a href="apt.html"><i class="fas fa-chevron-left"></i> PREVIOUS PROJECT </a></p> </div>
+                         <div> <p><a href="myc.html">NEXT PROJECT <i class="fas fa-chevron-right"></i></a></p></div>  
+                        </div>  
         </article>
 
-    <!-- Pager -->
-    <div class="pager" data-aos="fade-up">
-    <a href="apt.html"><i class="fas fa-chevron-left"></i></a>
-    <p>NEXT PROJECT</p>
-    <a href="myc.html"><i class="fas fa-chevron-right"></i></a>
-    </div>
+
 
 </section>
 
