--- a/index.html
+++ b/index.html
@@ -83,36 +83,28 @@
       </div>
     </a>
 </div>
-<!-- <div class="container">
-    <a href="/">
-    <img src="images/thm/thm-tre.jpg">
-    <div class="overlay">
-        <div class="text">
-            <h3>Troon Electric NYC</h3>
+    <div class="container">
+        <a href="esd.html">
+        <img src="images/thm/thm-esd.jpg">
+        <div class="overlay">
+            <div class="text">
+                <h3>East End Sign Designs</h3>
+            </div>
         </div>
-      </div>
-      </a>
-</div> -->
-                <!-- <div class="container">
-                    <a href="/">
-                    <img src="images/thm/osl-landing-page.jpg">
-                    <div class="overlay">
-                        <div class="text">
-                            <h3>Oceanside Library Website Redesign</h3>
-                        </div>
-                      </div>
-                      </a>
-                </div> -->
-                <!-- <div class="container">
-                    <a href="/">
-                    <img src="images/thm/thm-spl.jpg">
-                    <div class="overlay">
-                        <div class="text">
-                            <h3>Sidrane, Parsons Law</h3>
-                        </div>
-                      </div>
-                    </a>
-                </div> -->
+        </a>
+    </div>
+
+    <div class="container">
+        <a href="dsj.html">
+        <img src="images/thm/thm-dsj.jpg">
+        <div class="overlay">
+            <div class="text">
+                <h3>DSJ Accounting</h3>
+            </div>
+        </div>
+        </a>
+    </div>
+
 
             </div>
             </section>
