--- a/about-me.html
+++ b/about-me.html
@@ -42,26 +42,26 @@
                     <h1>A little <span>about me</span></h1>
                     <p>For me, Interactive Design is about understanding people's needs.</p>
                     </div>
-            <div class="container" data-aos="fade-up" data-aos-duration="4000">
+            <article class="flex" data-aos="fade-up" data-aos-duration="4000">
                 <aside>
                     <img src="https://via.placeholder.com/450"/>
 
                 </aside>
                 <aside>
-    <h3>Interactive design is all about understanding people's needs.</h3>
+                <h3>Interactive design is all about understanding people's needs.</h3>
 
-   <p>I am a web designer, graphic artist, UI/UX designer. I was born and raised on Long Island NY and I am currently living in Laguna Niguel CA. I work as 
-       a designer and WordPress developer for <a href="https://electricbricks.net/">Electric Bricks</a>, a NY-based media agency. I have a knack for designing to solve 
-       problems and creating intuitive, robust interfaces. It starts with listening to what the client needs and exploring solutions to the issue. I have designed for 
-    industries from Physical Therapy, Law Firms, Wineries, to large scale construction companies and news publishers.</p>
-    
-    <p>Previously, I’ve had the opportunity to work as a Senior Designer at <a href="http:newsday.com">Newsday LLC</a>, as well as several other agencies from 
-        small boutique sized companies to large firms. </p>
+            <p>I am a web designer, graphic artist, UI/UX designer. I was born and raised on Long Island NY and I am currently living in Laguna Niguel CA. I work as 
+                a designer and WordPress developer for <a href="https://electricbricks.net/">Electric Bricks</a>, a NY-based media agency. I have a knack for designing to solve 
+                problems and creating intuitive, robust interfaces. It starts with listening to what the client needs and exploring solutions to the issue. I have designed for 
+                industries from Physical Therapy, Law Firms, Wineries, to large scale construction companies and news publishers.</p>
+                
+                <p>Previously, I’ve had the opportunity to work as a Senior Designer at <a href="http:newsday.com">Newsday LLC</a>, as well as several other agencies from 
+                    small boutique sized companies to large firms. </p>
 
-    <a class="btn" href="pdf/matt-hogeboom-resume-2021.pdf">Resumè</a>
+                <a class="btn" href="pdf/matt-hogeboom-resume-2021.pdf">Resumè</a>
 
                 </aside>
-            </div>
+            </article>
             </section>
 
       </div>
