--- a/nda.html
+++ b/nda.html
@@ -36,7 +36,7 @@
                 </div>
             </header>
             <section id="intro" class="hero nda">
-            <article class="container">
+            <article class="flex">
                 <aside>
                 <small>NEWS</small>
             <h1>Newsday App</h1>
@@ -69,8 +69,6 @@
                         <li><i class="fas fa-check"></i> Build a CMS simple enough for them to update and maintain basic content.</li>
                     </ul>
            
-            </article>
-            <article>
                     <h3>Scope: </h3>
                 <div>
                     <ul>
@@ -84,9 +82,13 @@
         </section>
 
         <section id="style">
-            <article data-aos="fade-up">
+            <article>
                 <h3>Style Guide: </h3>
-                <div class="container">
+                <p>The initial landing page drew visitors with robust graphics and CTA’s, to direct the user to relevant information points, services and inquiry forms and
+                    establish contact with the doctors and set appointments to expedite treatment.</p>
+            </article>
+            <article data-aos="fade-up" class="flex">
+          
             <aside>
                 <p>Color Pallette</p>
                 <img src="images/style/nda-colors.png">
@@ -95,7 +97,6 @@
                 <p>Fonts</p>
                 <img src="images/style/nda-fonts.png">
             </aside>
-        </div>
             </article>
 
         </section>
@@ -145,7 +146,9 @@
 </section>
 
 <section id="mobile" data-aos="fade-up">
-    <article>
+    <div class="container">
+
+        <article class="flex">
         <aside>
         <img src="images/mobile/nda-home.png"/>
         </aside>
@@ -165,6 +168,7 @@
             <img src="images/mobile/nda-front.png"/>
         </aside>
     </article>
+    </div>
 
     </section>
 
