--- a/myc.html
+++ b/myc.html
@@ -152,8 +152,8 @@
         <section id="style">
             <article>
             <h3>Style Guide: </h3>
-            <p>The initial landing page drew visitors with robust graphics and CTA’s, to direct the user to relevant information points, services and inquiry forms and
-                establish contact with the doctors and set appointments to expedite treatment.</p>
+            <p>We used company barnding guidelines for the fonts and primary colors. We estblished a secondary color palette using related tones of blue and aqua to reflect 
+                an aquatic feel.</p>
         </article>
             <article data-aos="fade-up" class="flex">
 
