--- a/about-me.html
+++ b/about-me.html
@@ -38,7 +38,7 @@
         <div id="content">
             <section id="about">
                     <div class="title" data-aos="fade" data-aos-duration="4000">
-                    <h1>A little <span>about me</span></h1>
+                    <h1>A little information <span>about me</span></h1>
                     <p>For me, Interactive Design is about understanding people's needs.</p>
                     </div>
             <article class="flex" data-aos="fade-up" data-aos-duration="4000">
@@ -47,15 +47,19 @@
 
                 </aside>
                 <aside>
-                <h3>Interactive design is all about understanding people's needs.</h3>
+                <h2>Interactive design is all about <span>understanding people's needs.</span></h2>
 
             <p>I am a web designer, graphic artist, UI/UX designer. I was born and raised on Long Island NY and I am currently living in Laguna Niguel CA. I work as 
-                a designer and WordPress developer for <a href="https://electricbricks.net/">Electric Bricks</a>, a NY-based media agency. I have a knack for designing to solve 
-                problems and creating intuitive, robust interfaces. It starts with listening to what the client needs and exploring solutions to the issue. I have designed for 
-                industries from Physical Therapy, Law Firms, Wineries, to large scale construction companies and news publishers.</p>
+                a designer and WordPress developer for <a href="https://electricbricks.net/">Electric Bricks</a>, a NY-based media agency. Previously, I’ve had the opportunity to 
+                work as a Senior Designer at <a href="http:newsday.com">Newsday LLC</a>, as well as several other agencies from 
+                small boutique sized companies to large firms. </p>
                 
-                <p>Previously, I’ve had the opportunity to work as a Senior Designer at <a href="http:newsday.com">Newsday LLC</a>, as well as several other agencies from 
-                    small boutique sized companies to large firms. </p>
+                <p>I am inspired to solve problems and creating intuitive, robust interfaces. It starts with listening to what the client needs and exploring solutions. 
+                    I have designed for clients in industries ranging from Law Firms, Physical Therapy, News Publishers, Political Campaigns, to large scale Construction companies.</p>
+
+                <p>My design process is a simple. <strong>Understand, identify, execute.</strong> First - Understand the problem. Understand the people. Understand the business. Second - Identify a 
+                    solution. Identify the similar cases. Identify the progression and scope. Third - Execute on the visuals and the interactions.</p>
+                
 
                 <a class="btn" href="pdf/matt-hogeboom-resume-2021.pdf">Resumè</a>
 
