--- a/myc.html
+++ b/myc.html
@@ -89,7 +89,7 @@
                     <ul>
                         <li><i class="fas fa-check"></i> Navigation is confusing and over-complicated.</li>
                         <li><i class="fas fa-check"></i> Home page has no useful content or CTA's.</li>
-                        <li><i class="fas fa-check"></i> Club membership application and member services aren't .</li>
+                        <li><i class="fas fa-check"></i> Club membership application and member services aren't prominently displayed.</li>
                         <li><i class="fas fa-check"></i> Interior content is sparely populated and outdated.</li>
                         <li><i class="fas fa-check"></i> Graphic elements are redundant.</li>
                         <li><i class="fas fa-check"></i> Lack of CTA's prohibited users from purchasing items from their online store.</li>
