--- a/about-me.html
+++ b/about-me.html
@@ -37,7 +37,7 @@
 
         <div id="content">
             <section id="about">
-                    <div class="title" data-aos="fade" data-aos-duration="4000">
+                    <div class="title" data-aos="fade-down" data-aos-duration="4000">
                     <h1>A little information <span>about me</span></h1>
                     <p>For me, Interactive Design is about understanding people's needs.</p>
                     </div>
@@ -69,24 +69,22 @@
 
       </div>
 
-        <footer id="contact">
-            <div class="inner">
-                <a href="/">
-                    <img src="images/logos/logo-mph.svg" class="logo">
-                </a>
-                <div class="contact-info">
+      <footer id="contact">
+        <div class="inner">
 
-            <div class="social-media">
-                <a href="https://www.linkedin.com/in/matthogeboom/"><i class="fab fa-linkedin"></i></a>
-                <a href="/"><i class="fab fa-instagram-square"></i></a> 
-                <a href="https://www.behance.net/matthewhog56fa"><i class="fab fa-behance"></i></a>
-            </div>
-                <a href="mailto:matthewhogeboom@gmail.com"><i class="fas fa-paper-plane"></i> matthewhogeboom@gmail.com</a>
-                <p><i class="fas fa-phone-volume"></i> (949) 542-9693</p>
+                <div class="social-media">
+                    <a href="https://www.linkedin.com/in/matthogeboom/"><i class="fab fa-linkedin"></i></a>
+                   <a href="/"><i class="fab fa-instagram-square"></i></a> 
+                    <a href="https://www.behance.net/matthewhog56fa"><i class="fab fa-behance"></i></a>
                 </div>
+
+            <div class="contact-info">    
+            <a href="mailto:matthewhogeboom@gmail.com"><i class="fas fa-paper-plane"></i> matthewhogeboom@gmail.com</a>
+            <p><i class="fas fa-phone-volume"></i> (949) 542-9693</p>
             </div>
-            </div>
-        </footer>
+
+        </div>
+    </footer>
     </div>
     <script>
         AOS.init({
