--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div id="content">
             <section id="work">
-                    <div class="title" data-aos="fade" data-aos-duration="4000">
+                    <div class="title" data-aos="fade-down" data-aos-duration="4000">
                     <h1>Hello, I’m Matt! 
                         I’m a <span>Visual Designer</span></h1>
                     <p>I am a senior designer who loves creating interfaces.</p>
@@ -112,20 +112,18 @@
 
       <footer id="contact">
         <div class="inner">
-            <a href="/">
-                <img src="images/logos/logo-mph.svg" class="logo">
-            </a>
-            <div class="contact-info">
 
                 <div class="social-media">
                     <a href="https://www.linkedin.com/in/matthogeboom/"><i class="fab fa-linkedin"></i></a>
                    <a href="/"><i class="fab fa-instagram-square"></i></a> 
                     <a href="https://www.behance.net/matthewhog56fa"><i class="fab fa-behance"></i></a>
                 </div>
+
+            <div class="contact-info">    
             <a href="mailto:matthewhogeboom@gmail.com"><i class="fas fa-paper-plane"></i> matthewhogeboom@gmail.com</a>
             <p><i class="fas fa-phone-volume"></i> (949) 542-9693</p>
             </div>
-        </div>
+
         </div>
     </footer>
     </div>
